--- a/index.html
+++ b/index.html
@@ -7,16 +7,31 @@
 	<!-- Framework css -->
 	<link rel="stylesheet" href="./css/blueprint/screen.css" type="text/css" media="screen">
 	<!--[if lt IE 8]><link rel="stylesheet" href="./css/blueprint/ie.css" type="text/css" media="screen"><![endif]-->
-	<link rel="stylesheet" href="./css/blueprint/ie.css" type="text/css" media="screen">
-	
+		
 	<!-- javascript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
 	<script src="./js/main.js"></script>
-
 </head>
 <body>
-
-
-
+	<div class="container showgrid">
+		<div class="span-24">
+			The header
+		</div>
+		<hr class="space"/>
+		<div class="span-3">
+			The first column
+			<br/>
+			<a href="#" onclick="baidu_map();return false;">百度地图Api</a>
+		</div>
+		<div class="span-20 last">
+			main content
+			<div id="map_canvas" style="height:480px;"></div>
+		</div>
+		<hr class="space"/>
+		<div class="span-24">
+			The footer
+		</div>
+	</div>
 </body>
 </html>
