--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<!-- javascript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&language=zh"></script>
+	<script type="text/javascript" src="http://api.map.soso.com/v1.0/main.js"></script>
 	<script src="./js/main.js"></script>
 </head>
 <body>
@@ -22,7 +24,11 @@
 		<div class="span-3">
 			The first column
 			<br/>
-			<a href="#" onclick="baidu_map();return false;">百度地图Api</a>
+			<ul>
+				<li><a href="#" onclick="baidu_map();return false;">百度地图</a></li>
+				<li><a href="#" onclick="google_map();return false;">Google地图</a></li>
+				<li><a href="#" onclick="soso_map();return false;">soso地图</a></li>
+			</ul>
 		</div>
 		<div class="span-20 last">
 			main content
