jquery ajax load

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 				<li><a href="#" onclick="baidu_map();return false;">百度地图</a></li>
 				<li><a href="#" onclick="google_map();return false;">Google地图</a></li>
 				<li><a href="#" onclick="soso_map();return false;">soso地图</a></li>
+				<li><a href="#" onclick="load_html();return false;">LoadHtml</a></li>
 			</ul>
 		</div>
 		<div class="span-20 last">
-			main content
+			<div id="content"></div>
 			<div id="map_canvas" style="height:480px;"></div>
 		</div>
 		<hr class="space"/>
