--- a/left.html
+++ b/left.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 	<ul>
+		<li><a href="right.html" target="right">Origin</a></li>
 		<li><a href="right_1.html" target="right">Google</a></li>
-		<li>second</li>
 		<li>third</li>
 	</ul>
 </body>
