--- a/left.html
+++ b/left.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+</head>
 <body>
 	<ul>
 		<li><a href="right.html" target="right">Origin</a></li>
 		<li><a href="right_1.html" target="right">Google</a></li>
-		<li>third</li>
+		<li><a href="test_bootstrap.html" target="_blank">学习bootstrap</a></li>
 	</ul>
 </body>
 </html>
