--- a/right.html
+++ b/right.html
@@ -9,10 +9,10 @@
 	<!--[if lt IE 8]><link rel="stylesheet" href="./css/blueprint/ie.css" type="text/css" media="screen"><![endif]-->
 		
 	<!-- javascript -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&language=zh"></script>
 	<script type="text/javascript" src="http://api.map.soso.com/v1.0/main.js"></script>
+	<script src="./js/jquery172.js"></script>
 	<script src="./js/main.js"></script>
 </head>
 <body>
