--- a/left.html
+++ b/left.html
@@ -8,6 +8,7 @@
 		<li><a href="right.html" target="right">Origin</a></li>
 		<li><a href="right_1.html" target="right">Google</a></li>
 		<li><a href="test_bootstrap.html" target="_blank">学习bootstrap</a></li>
+		<li><a href="test_component.html" target="_blank">component</a></li>
 	</ul>
 </body>
 </html>
