create a layout html with bootstrap from 0

--- a/left.html
+++ b/left.html
@@ -9,6 +9,7 @@
 		<li><a href="right_1.html" target="right">Google</a></li>
 		<li><a href="test_bootstrap.html" target="_blank">学习bootstrap</a></li>
 		<li><a href="test_component.html" target="_blank">component</a></li>
+		<li><a href="layout_with_bootstrap.html" target="_blank">layout</a></li>
 	</ul>
 </body>
 </html>
