--- a/left.html
+++ b/left.html
@@ -10,6 +10,7 @@
 		<li><a href="test_bootstrap.html" target="_blank">学习bootstrap</a></li>
 		<li><a href="test_component.html" target="_blank">component</a></li>
 		<li><a href="layout_with_bootstrap.html" target="_blank">layout</a></li>
+		<li><a href="jqueryui.html" target="_blank">jquery ui</a></li>
 	</ul>
 </body>
 </html>
