--- a/left.html
+++ b/left.html
@@ -7,10 +7,11 @@
 	<ul>
 		<li><a href="right.html" target="right">Origin</a></li>
 		<li><a href="right_1.html" target="right">Google</a></li>
-		<li><a href="test_bootstrap.html" target="_blank">学习bootstrap</a></li>
-		<li><a href="test_component.html" target="_blank">component</a></li>
-		<li><a href="layout_with_bootstrap.html" target="_blank">layout</a></li>
-		<li><a href="jqueryui.html" target="_blank">jquery ui</a></li>
+		<li><a href="test_bootstrap.html" target="right">学习bootstrap</a></li>
+		<li><a href="test_component.html" target="right">component</a></li>
+		<li><a href="layout_with_bootstrap.html" target="right">layout</a></li>
+		<li><a href="jqueryuitabs.html" target="right">jquery ui tabs</a></li>
+		<li><a href="jqueryuiaccordion.html" target="right">jquery ui accordion</a></li>
 	</ul>
 </body>
 </html>
