--- a/left.html
+++ b/left.html
@@ -12,6 +12,7 @@
 		<li><a href="layout_with_bootstrap.html" target="right">layout</a></li>
 		<li><a href="jqueryuitabs.html" target="right">jquery ui tabs</a></li>
 		<li><a href="jqueryuiaccordion.html" target="right">jquery ui accordion</a></li>
+		<li><a href="learnjqueryedition3.html" target="right">jquery edition 3 basic</a></li>
 	</ul>
 </body>
 </html>
