--- a/bt3.html
+++ b/bt3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
   <head>
     <title>Bootstrap 101 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,33 @@
     <![endif]-->
   </head>
   <body>
-	
+      <div class="container">
+          <div class="row">
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+              <div class="col-md-1">.col-md-1</div>
+          </div>
+          <div class="row">
+              <div class="col-md-3"><p class="lead">图森栓私用只能双方we分东方网中方we服务双方we我饿。</p></div>
+              <div class="col-md-3">.col-md-3</div>
+              <div class="col-md-3">.col-md-3</div>
+              <div class="col-md-3">.col-md-3</div>
+          </div>
+          <div class="row">
+              <div class="col-md-8">.col-md-8</div>
+              <div class="col-md-4">.col-md-4</div>
+          </div>
+          
+      </div>
   
   
   
